# etpproto-python

./: .flake8  .gitignore  LICENSE  README.md  flake8-report.txt  pyproject.toml
.github/: codecov.yml  dependabot.yml
.github/actions/prepare-poetry/: action.yml
.github/workflows/: ci-publish-test-repo.yml  ci-publish.yml  ci-tests.yml  codeql-analysis.yml
etpproto/: __init__.py  client_info.py  connection.py  endpoint_capability_kind.py  error.py  messages.py  uri.py  utils.py
etpproto/protocols/: __init__.py  channel_data_frame.py  channel_data_load.py  channel_streaming.py  channel_subscribe.py  core.py  data_array.py  dataspace.py  discovery.py  discovery_query.py  growing_object.py  growing_object_notification.py  growing_object_query.py  store.py  store_notification.py  store_query.py  supported_types.py  transaction.py
tests/: server_protocol_example.py  test_array_types.py  test_auth.py  test_client_info.py  test_connection.py  test_fastavro.py  test_instanceGeneric.py  test_messages.py  test_protocols.py  test_pydantic.py  test_unserialAvro.py  test_uris.py
tests/data/: arrays.py
