[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "etpproto"
version = "1.0.6.dev6" # Set at build time
description = "ETP protocol implementation"
authors = [
    "Lionel Untereiner <lionel.untereiner@geosiris.com>", 
    "Valentin Gauthier <valentin.gauthier@geosiris.com>"
]
maintainers = [
    "Lionel Untereiner <lionel.untereiner@geosiris.com>", 
    "Valentin Gauthier <valentin.gauthier@geosiris.com>"
]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/geosiris-technologies/etpproto-python"
homepage = "http://www.geosiris.com"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: Apache Software License",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development",
    "Typing :: Typed",
]
keywords = ["ETP"]

[tool.poetry.dependencies]
python = "^3.9"
fastavro = "^1.6.1"
etptypes = "^1.0.1"

[tool.poetry.dev-dependencies]
coverage = {extras = ["toml"], version = "7.6.10"}
pytest = "^8.3.4"
flake8 = "^7.1.0"
black = "^24.10.0"
pytest-cov = "^6.0.0"
pre-commit = "^2.11.1"
pylint = "^3.3.3"
pytest-asyncio = "^0.25.2"
mypy = "^1.14.0"
click = ">=8.1.3, <=8.1.3" # upper version than 8.0.2 fail with black
isort = "^5.10.1"

[tool.black]
line-length = 79
target-version = ["py39"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.pytest_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | htmlcov
)/
'''

[tool.pytest.ini_options]
addopts = ""
console_output_style = "count"
python_classes = "Test"
python_files = "test_*.py"
python_functions = "test*"
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.coverage.run]
branch = true
source = ["etpproto"]

[tool.pylint.format]
max-line-length = "88"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "pep440"
format-jinja = """
    {%- if distance == 0 -%}
        {{ serialize_pep440(base, stage, revision) }}
    {%- elif revision is not none -%}
        {{ serialize_pep440(base, stage, revision + 1, dev=distance) }}
    {%- else -%}
        {{ serialize_pep440(bump_version(base), stage, revision, dev=distance) }}
    {%- endif -%}
"""
